Applied minor IDE suggestions in 'group' package